WIP: fixing overflow of emails

--- a/src/components/sign-in/styles.styl
+++ b/src/components/sign-in/styles.styl
@@ -2,3 +2,14 @@
 
 .submitWrap
   margin-top: 10px
+
+.emailAddress
+  display: flex;
+  max-width: 190px;
+
+.firstEmail
+  white-space: nowrap
+  overflow: hidden
+  text-overflow: ellipsis
+  width: 200px
+  display: block
